# ccr-tray

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  commands.rs  config.rs  main.rs  process.rs  tray.rs
